[tool.pdm]

[project]
name = "youguanxinqing"
version = "0.1.0"
description = ""
authors = [
    {name = "youguanxinqing", email = "youguanxinqing@qq.com"},
]
dependencies = [
    "pypinyin>=0.48.0",
    "tornado>=6.2",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
